feat: add Redis-backed session